[gd_scene load_steps=10 format=3 uid="uid://ddwcdis3ndvvm"]

[ext_resource type="FontFile" uid="uid://bbtlss1puugqn" path="res://fonts/orbitron-medium.otf" id="2"]
[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://n2yd8i4x5hox" path="res://menus/SongTitleScrolling.tscn" id="4_a3lbd"]
[ext_resource type="Script" path="res://menus/music_player/MainMenuMusicPlayer.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://cwn3cpsxb1ntk" path="res://graphics/no_preview_texture.png" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.188235, 0.0705882, 0.301961, 0.74902)
border_width_left = 100
border_width_top = 5
border_width_bottom = 5
border_color = Color(0.929412, 0.215686, 0.8, 0.501961)
corner_radius_top_left = 1024
corner_detail = 1
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10
anti_aliasing = false

[sub_resource type="StyleBoxLine" id="StyleBoxLine_24haw"]
color = Color(1, 1, 1, 0.5)
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_obf6w"]
color = Color(1, 1, 1, 1)
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="GDScript" id="GDScript_wpdnd"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_line_edit_text_submitted(new_text):
	$InputGlyphRect.action_name = new_text
"

[node name="MainMenuMusicPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.944
anchor_right = 1.0
anchor_bottom = 0.944
offset_top = -100.0
mouse_filter = 2
alignment = 2

[node name="MusicPlayer" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(900, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme = ExtResource("4")
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MusicPlayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -5.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MusicPlayer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_stretch_ratio = 0.6
texture = ExtResource("6")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SongTitle" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("4_a3lbd")]
self_modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="PlaybackCurrentTimeLabel" type="Label" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "(NT)1:02/"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/background = SubResource("StyleBoxLine_24haw")
theme_override_styles/fill = SubResource("StyleBoxLine_obf6w")
max_value = 1.0
step = 0.0
value = 0.5
show_percentage = false

[node name="PlaybackMaxLabel" type="Label" parent="HBoxContainer/MusicPlayer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 24
text = "(NT)4:00"
horizontal_alignment = 2

[node name="PromptInputAction" type="InputGlyphRect" parent="HBoxContainer/MusicPlayer"]
layout_mode = 0
anchor_left = 0.073
anchor_top = 0.2
anchor_right = 0.079
anchor_bottom = 0.8
offset_left = 0.300003
offset_right = 55.9
action_text = ""
action_name = &"gui_show_song"
script = SubResource("GDScript_wpdnd")
